@@ -59,7 +59,7 @@ public class StateContextTests extends AbstractStateMachineTests {
 		doStartAndAssert(machine);
 		assertThat(machine.getState().getIds()).containsOnly(States.S0, States.S1, States.S11);
 		assertThat(listener.contexts).hasSize(19);
-		assertThat(listener.contexts.stream().map(c -> c.getStage()).collect(Collectors.toList())).containsExactly(
+		assertThat(listener.contexts.stream().map(StateContext::getStage).collect(Collectors.toList())).containsExactly(
 			Arrays.asList(
 				Stage.TRANSITION_START,
 				Stage.EXTENDED_STATE_CHANGED,
@@ -83,11 +83,11 @@ public class StateContextTests extends AbstractStateMachineTests {
 				).toArray(new Stage[0])
 		);
 
-		assertThat(listener.contexts.get(0).getStage()).isEqualTo(Stage.TRANSITION_START);
-		assertThat(listener.contexts.get(0).getTransition()).isNotNull();
-		assertThat(listener.contexts.get(0).getTransition().getSource()).isNull();
-		assertThat(listener.contexts.get(0).getTransition().getTarget()).isNotNull();
-		assertThat(listener.contexts.get(0).getTransition().getTarget().getId()).isEqualTo(States.S0);
+		assertThat(listener.contexts.getFirst().getStage()).isEqualTo(Stage.TRANSITION_START);
+		assertThat(listener.contexts.getFirst().getTransition()).isNotNull();
+		assertThat(listener.contexts.getFirst().getTransition().getSource()).isNull();
+		assertThat(listener.contexts.getFirst().getTransition().getTarget()).isNotNull();
+		assertThat(listener.contexts.getFirst().getTransition().getTarget().getId()).isEqualTo(States.S0);
 		assertThat(listener.contexts.get(0).getSource()).isNull();
 		assertThat(listener.contexts.get(0).getTarget()).isNotNull();
 
@@ -163,7 +163,7 @@ public class StateContextTests extends AbstractStateMachineTests {
 		doSendEventAndConsumeAll(machine, Events.J);
 
 		// all nested machines sends these
-		assertThat(listener.contexts.stream().map(c -> c.getStage()).collect(Collectors.toList())).containsExactly(
+		assertThat(listener.contexts.stream().map(StateContext::getStage).collect(Collectors.toList())).containsExactly(
 			Arrays.asList(
 				Stage.EVENT_NOT_ACCEPTED,
 				Stage.EVENT_NOT_ACCEPTED,
@@ -171,17 +171,17 @@ public class StateContextTests extends AbstractStateMachineTests {
 				).toArray(new Stage[0])
 		);
 
-		assertThat(listener.contexts.get(0).getStage()).isEqualTo(Stage.EVENT_NOT_ACCEPTED);
-		assertThat(listener.contexts.get(0).getTransition()).isNull();
-		assertThat(listener.contexts.get(0).getEvent()).isEqualTo(Events.J);
-		assertThat(listener.contexts.get(0).getSource()).isNotNull();
-		assertThat(listener.contexts.get(0).getSource().getId()).isEqualTo(States.S0);
-		assertThat(listener.contexts.get(0).getTarget()).isNull();
+		assertThat(listener.contexts.getFirst().getStage()).isEqualTo(Stage.EVENT_NOT_ACCEPTED);
+		assertThat(listener.contexts.getFirst().getTransition()).isNull();
+		assertThat(listener.contexts.getFirst().getEvent()).isEqualTo(Events.J);
+		assertThat(listener.contexts.getFirst().getSource()).isNotNull();
+		assertThat(listener.contexts.getFirst().getSource().getId()).isEqualTo(States.S0);
+		assertThat(listener.contexts.getFirst().getTarget()).isNull();
 	}
 
 	static class TestStateMachineListener extends StateMachineListenerAdapter<States, Events> {
 
-		ArrayList<StateContext<States, Events>> contexts = new ArrayList<>();
+		final ArrayList<StateContext<States, Events>> contexts = new ArrayList<>();
 
 		@Override
 		public void stateContext(StateContext<States, Events> stateContext) {
@@ -313,11 +313,11 @@ public class StateContextTests extends AbstractStateMachineTests {
 
 	}
 
-	public static enum States {
+	public enum States {
 		S0, S1, S11, S12, S2, S21, S211, S212
 	}
 
-	public static enum Events {
+	public enum Events {
 		A, B, C, D, E, F, G, H, I, J
 	}
 
