@@ -99,8 +99,8 @@ public class StateMachineEventTests extends AbstractStateMachineTests {
 		machine.sendEvent(TestEvents.E3);
 		assertThat(eventListener.onEventLatch.await(2, TimeUnit.SECONDS)).isTrue();
 		assertThat(eventListener.eventNotAcceptedEvents).hasSize(1);
-		assertThat(eventListener.eventNotAcceptedEvents.get(0)).isInstanceOf(OnEventNotAcceptedEvent.class);
-		assertThat(((OnEventNotAcceptedEvent)eventListener.eventNotAcceptedEvents.get(0)).getEvent().getPayload()).isEqualTo(TestEvents.E3);
+		assertThat(eventListener.eventNotAcceptedEvents.getFirst()).isInstanceOf(OnEventNotAcceptedEvent.class);
+		assertThat(((OnEventNotAcceptedEvent)eventListener.eventNotAcceptedEvents.getFirst()).getEvent().getPayload()).isEqualTo(TestEvents.E3);
 
 		assertThat(listener.eventNotAcceptedLatch.await(2, TimeUnit.SECONDS)).isTrue();
 		assertThat(listener.eventNotAccepted).hasSize(1);
@@ -437,8 +437,8 @@ public class StateMachineEventTests extends AbstractStateMachineTests {
 
 		volatile CountDownLatch onEventLatch = new CountDownLatch(6);
 
-		volatile ArrayList<StateMachineEvent> stateChangedEvents = new ArrayList<StateMachineEvent>();
-		volatile ArrayList<StateMachineEvent> eventNotAcceptedEvents = new ArrayList<StateMachineEvent>();
+		final ArrayList<StateMachineEvent> stateChangedEvents = new ArrayList<>();
+		volatile ArrayList<StateMachineEvent> eventNotAcceptedEvents = new ArrayList<>();
 
 		@Override
 		public void onApplicationEvent(StateMachineEvent event) {
@@ -453,7 +453,7 @@ public class StateMachineEventTests extends AbstractStateMachineTests {
 
 		public void reset(int c1,int c2) {
 			onEventLatch = new CountDownLatch(c1);
-			eventNotAcceptedEvents = new ArrayList<StateMachineEvent>();
+			eventNotAcceptedEvents = new ArrayList<>();
 			stateChangedEvents.clear();
 			eventNotAcceptedEvents.clear();
 		}
@@ -463,7 +463,7 @@ public class StateMachineEventTests extends AbstractStateMachineTests {
 	static class TestListener extends StateMachineListenerAdapter<TestStates, TestEvents> {
 
 		volatile CountDownLatch eventNotAcceptedLatch = new CountDownLatch(1);
-		volatile ArrayList<Message<TestEvents>> eventNotAccepted = new ArrayList<Message<TestEvents>>();
+		final ArrayList<Message<TestEvents>> eventNotAccepted = new ArrayList<>();
 
 		@Override
 		public void eventNotAccepted(Message<TestEvents> event) {
